[package]
name = "pmi"
version = "0.1.0"
edition = "2021"
links = "pminative"

[dependencies]
pmi-sys = { path = "../pmi-sys", optional = true }
pmi2-sys = { path = "../pmi2-sys", optional = true }
pmix-sys = { path = "../pmix-sys", optional = true }


[features]
with-pmi1 = ["pmi-sys"]
with-pmi2 = ["pmi2-sys"]
with-pmix = ["pmix-sys"]
vendored = ["pmi-sys?/vendored", "pmi2-sys?/vendored", "pmix-sys?/vendored"]
