[package]
name = "lamellar-ucx-sys"
authors = ["Ryan Friese <ryan.friese@pnnl.gov>"]
version = "0.1.0"
edition = "2024"
description = "This system crate provides Rust language bindings (via the use of Bindgen) to the UCXlibrary."
readme = "README.md"
repository = "https://github.com/pnnl/lamellar-runtime/tree/main/lamellar-ucx-sys"
license-file = "LICENSE"
keywords = ["hpc", "network", "ditributed", "libfabrics"]
categories = ["external-ffi-bindings", "network-programming"]
links = "ucx"


[build-dependencies]
autotools = "0.2.7"
bindgen = "0.72.1"
glob = "0.3.3"
subprocess = "0.2.9"

[lib]
name = "lamellar_ucx_sys"

[features]
shared = []
