[package]
name = "pmix-sys"
version = "0.1.0"
edition = "2021"
links = "pmix"
build = "build.rs"


[features]
vendored = ["openpmix-src", "hwlocality-sys", "libevent-sys"]

[dependencies]
hwlocality-sys = { version = "0.6.1", features = [
    "hwloc-latest",
    "vendored",
], optional = true }
libevent-sys = { version = "0.3", features = [
    "bundled",
    "openssl_bundled",
    "threading",
], optional = true }

[build-dependencies]
openpmix-src = { git = "https://github.com/pnnl/lamellar", optional = true }
bindgen = "0.72.1"
